fixed overflow unintended hidden

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+* {
+  overflow: inherit !important;
+}
+
 /* .App {
   font-family: "Syncopate", sans-serif;
 } */
