--- a/client/src/Pages/Contact.css
+++ b/client/src/Pages/Contact.css
@@ -1,3 +1,6 @@
+/* #contactPage {
+  overflow: scroll !important;
+} */
 #right {
   margin-right: auto;
 }
